Fixed skrollr to work on mobile devices (tested only on Android so far)

--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,12 @@ a{
 
 
 /*==========Header Styles==========*/
+#skrollr-body{
+  float: left;
+  width: 100%;
+  height: 100%;
+}
+
 header{
   height: 100%;
   width: 100%;
